--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,18 @@ title: "Galen Guyer" # the name of your site, e.g. ACME Corp.
 
 plugins:
   - jekyll-tidy
+
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - bake.sh
+  - Dockerfile
+  - Dockerfile.files
+  - docker-bake.hcl
